--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: Publish Python Package
+name: Publish k8st Package
 
 on:
   push:
@@ -67,5 +67,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.K8ST_TOKEN }}
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: "v${{steps.bump.outputs.new_version}}"
           files: dist/*
           generate_release_notes: true
