--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,23 +13,11 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v4
+      - name: Check out
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12.2'
-        
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: latest
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-      
-      - name: Install dependencies
-        run: poetry install --no-interaction
+
       - name: Determine version bump
         if: |
             ${{ !contains(github.event.head_commit.message, 'chore: bump version') && github.ref == 'refs/heads/main' }}
@@ -39,6 +27,21 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           dry_run: true
           default_bump: patch
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12.2'
+
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
+      - name: Install dependencies
+        run: poetry install --no-interaction
 
       - name: Update version
         if: steps.bump.outputs.new_version != ''
